fixed bug with position state being behind

--- a/src/App.css
+++ b/src/App.css
@@ -22,11 +22,23 @@
 }
 
 .grid-container {
-  height: 200px;
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   flex: 1;
+}
+
+.main-container {
+  width: 95vh;
+  display: flex;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .blue {
